traefik/ingressroute/ingressroute-secure-staging.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-secure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.adadeeeh.com`)
      kind: Rule
      services:
        - name: nginx
          port: 80
  tls:
    secretName: nginx-cert-staging
